# crypto-auto-trade

./: .gitignore  CODEX.md  PRICE_DATA_AND_SIMULATION.md  README.md  STRATEGIES.md  STRATEGY_VARIANTS.md  pyproject.toml
.devcontainer/: devcontainer.json
crypto_auto_trade/: __init__.py  backtest.py  cli.py  data.py  exchange_adapters.py  exchange_registry.py  indicators.py  market_data.py  models.py  profitability.py  risk.py  simulation.py  strategies.py  strategy_variants.py  trader.py  validation.py  web.py
docs/: architecture.md  ci-status.md  cloudflare-pages-workers.md  cloudflare-tunnel.md  japan-exchanges.md  price-data-and-simulation.md  setup.md  strategy-library.md  strategy-variants-explained.md  trading-strategies.md  trailing-stop.md
docs/workflows/: ci.yml  market-simulation.yml  realtime-validation.yml
scripts/: cloudflare_tunnel.sh
static/: app.js  index.html  styles.css
tests/: test_backtest_validation.py  test_exchange_registry.py  test_indicators.py  test_market_data_simulation.py  test_profitability.py  test_readme_assets.py  test_strategies.py  test_strategy_variants.py  test_trader_web.py  test_trailing_stop.py
worker/: deploy.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: backtest.ts  exchanges.ts  index.ts  indicators.ts  marketdata.ts  profitability.ts  strategies.ts  validation.ts
worker/test/: engine.test.ts
